--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
-    "rewrites": [
-      { "source": "/(.*)", "destination": "/backend/server.js" }
+    "builds": [
+      { "src": "backend/server.js", "use": "@vercel/node" }
+    ],
+    "routes": [
+      { "src": "/(.*)", "dest": "backend/server.js" }
     ]
-}
+  }
   
